...
  @override
  String cartaSemantica(String valor, String palo) {
    return 'Carta: $valor de $palo';
  }

  @override
  String get impostorTitulo => 'El Impostor';

  @override
  String get impostorMenuTitulo => 'El Impostor';

  @override
  String get impostorMenuDescripcion =>
...
  String get maximoJugadoresAlcanzado => 'Máximo de jugadores alcanzado';

  @override
  String get setupImpostores => 'Impostores';

  @override
  String get setupPista => 'Pista';

  @override
  String get iniciandoPartida => 'Iniciando...';

  @override
  String get empezarPartida => 'Empezar partida';

  @override
  String jugadorNumero(int n) {
    return 'Jugador $n';
  }

...
  String get menosImpostores => 'Menos impostores';

  @override
  String get masImpostores => 'Más impostores';

  @override
  String get darPistaAlImpostor => 'Dar pista al impostor';

  @override
  String get darPistaAlImpostorSubtitulo =>
      'Si está activa, el impostor verá una pista sobre la palabra.';

  @override
...

  @override
  String get pasaleElMovilAyuda =>
      'Cuando lo tenga en sus manos, pulsa continuar y revela tu rol en privado.';

  @override
  String get continuar => 'Continuar';

  @override
  String get esElTurnoDe => 'Es el turno de';

  @override
  String get pulsaRevelar =>
      'Pulsa \"Revelar\" cuando seas tú quien mira la pantalla.';

  @override
  String get revelar => 'Revelar';

  @override
  String get ocultarYPasar => 'Ocultar y pasar';

  @override
  String get ocultarYVerResultados => 'Ocultar y ver resultados';

  @override
  String get impostorMayus => 'IMPOSTOR';

  @override
  String get tuPalabraEs => 'Tu palabra es';

  @override
  String get noHayPartidaEnCurso => 'No hay ninguna partida en curso.';
...
  String get seguirJugando => 'Seguir jugando';

  @override
  String get salir => 'Salir';

  @override
  String get resultadoDeLaPartida => 'Resultado de la partida';

  @override
  String get noHayPartidaQueMostrar => 'No hay ninguna partida que mostrar.';

  @override
  String get laPalabraEra => 'La palabra era';
...
  String get menosRondas => 'Menos rondas';

  @override
  String get masRondas => 'Más rondas';

  @override
  String get votacionTitulo => 'Votación';

  @override
  String get votacionInstruccion => 'Votad a quien creáis impostor';

  @override
  String votacionRondaXDeY(int actual, int total) {
    return 'Ronda $actual de $total';
  }

  @override
  String get votacionExpulsar => 'Expulsar';

  @override
  String votacionConfirmarExpulsion(String nombre) {
    return '¿Expulsar a $nombre?';
  }

  @override
  String get votacionImpostorSigue => 'El impostor sigue entre vosotros';

  @override
  String get votacionJugadoresGanan => '¡Habéis ganado!';

  @override
  String get finDePartidaTitulo => 'Fin de la partida';

  @override
  String get sacandoCartaEn => 'Sacando carta en...';
...
